--- a/index.html
+++ b/index.html
@@ -19,34 +19,35 @@
     </header>
 
     <main>
-        <div class="apresentacao">
-          <div class="foto-minha">
-            <img src="minhaFoto.jpg">  
-          </div>
-            <p>    
-                Se você chegou até aqui, é porque ama a leitura tanto quanto eu. Minha jornada com os livros espíritas começou há alguns anos, quase sem querer, e confesso: não imaginava que se tornaria uma paixão tão profunda.
-            </p>
-            <p> 
-                Com o tempo, percebi que cada história que lia me transformava. Passei a enxergar a vida por outras perspectivas — formas de pensar, agir e me posicionar diante dos desafios começaram a mudar, e continuam mudando a cada página virada.
-            </p>
-            <p>
-                Me vi em muitos personagens, em suas dores, descobertas, amores e incompreensões. A leitura me encontrou em um dos períodos mais difíceis da minha vida e, desde então, tem sido uma fonte de luz. Alguns desses livros chegaram até mim por pura intuição — num sebo, numa tarde comum, no meio da correria. E, para minha surpresa, cada um parecia falar exatamente sobre o que eu estava vivendo.
-            </p>
-            <p>Foi assim que entendi como a espiritualidade se comunica conosco.</p>
-            <p>
-                Acredito que o conhecimento é um caminho sem fim — e quanto mais temos, mais podemos compartilhar. É por isso que criei esse espaço: meu pequeno mundo virtual, onde posso dividir com você os livros
-                que fizeram parte de tantos momentos da minha caminhada.
-            </p> 
-            <p>Espero que, assim como aconteceu comigo, algum deles também encontre você — no momento certo.</p>
-            </div>
        <div class="wrapper">
-               <ul class="lista-livros"></ul>
+            <h3>Livros</h3>   
+            <ul class="lista-livros"></ul>
         </div>
         <div class="wrapper">
             <h3>Adicionados recentemente</h3>
             <section class="livros-destaques">
            </section>     
         </div>
+        <div class="apresentacao">
+            <div class="foto-minha">
+              <img src="minhaFoto.jpg">  
+            </div>
+              <p>    
+                  Se você chegou até aqui, é porque ama a leitura tanto quanto eu. Minha jornada com os livros espíritas começou há alguns anos, quase sem querer, e confesso: não imaginava que se tornaria uma paixão tão profunda.
+              </p>
+              <p> 
+                  Com o tempo, percebi que cada história que lia me transformava. Passei a enxergar a vida por outras perspectivas — formas de pensar, agir e me posicionar diante dos desafios começaram a mudar, e continuam mudando a cada página virada.
+              </p>
+              <p>
+                  Me vi em muitos personagens, em suas dores, descobertas, amores e incompreensões. A leitura me encontrou em um dos períodos mais difíceis da minha vida e, desde então, tem sido uma fonte de luz. Alguns desses livros chegaram até mim por pura intuição — num sebo, numa tarde comum, no meio da correria. E, para minha surpresa, cada um parecia falar exatamente sobre o que eu estava vivendo.
+              </p>
+              <p>Foi assim que entendi como a espiritualidade se comunica conosco.</p>
+              <p>
+                  Acredito que o conhecimento é um caminho sem fim — e quanto mais temos, mais podemos compartilhar. É por isso que criei esse espaço: meu pequeno mundo virtual, onde posso dividir com você os livros
+                  que fizeram parte de tantos momentos da minha caminhada.
+              </p> 
+              <p>Espero que, assim como aconteceu comigo, algum deles também encontre você — no momento certo.</p>
+              </div>
     </main>
 
     <footer>
