--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog-livros</title>
-    <link rel="stylesheet" href="styles.css">
+    <link id="css" rel="stylesheet">
+    <script>
+      document.getElementById('css').href = 'styles.css?' + new Date().getMinutes() + ':' + new Date().getSeconds();
+    </script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Lora&display=swap" rel="stylesheet">
 
 </head>
@@ -19,7 +22,9 @@
     </header>
 
     <main>
-        <h3>Livros</h3>   
+        <div class="livroInicio">
+            <h3>Livros</h3>   
+        </div>
        <div class="wrapper">
             <ul class="lista-livros"></ul>
         </div>
