atualizando insta correto

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
        <div class="redes-sociais">
             <a href="https://www.linkedin.com/in/larissakovalsikoski">
                 <img src="fotosLivros/linkedin.png" alt="LinkedIn" class="social-icon"></a>
-            <a href="https://www.linkedin.com/in/larissakovalsikoski?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">
+            <a href="https://www.instagram.com/diask_lari">
                 <img src="fotosLivros/Instagram_icon.png"class="social-icon-insta" alt="Instagram">
             </a> 
         </a>
@@ -68,5 +68,4 @@
     </footer>
     <script src="scripts.js"></script>
 </body>
-
 </html>
