--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Blog-livros</title>
     <link id="css" rel="stylesheet">
     <script>
-      document.getElementById('css').href = 'styles.css?' + new Date().getMinutes() + ':' + new Date().getSeconds();
+      document.getElementById('css').href = 'styles.css?' + new Date().getTime();
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Lora&display=swap" rel="stylesheet">
 
@@ -66,6 +66,9 @@
         </a>
     </div>
     </footer>
-    <script src="scripts.js"></script>
+    <script id="script"></script>
+    <script>
+        document.getElementById('script').src = 'scripts.js?' + new Date().getTime();
+    </script>
 </body>
 </html>
